--- a/videoSync_Frontend/src/index.css
+++ b/videoSync_Frontend/src/index.css
@@ -1,3 +1,20 @@
 @import "tailwindcss";
 
+@layer utilities {
+  
+  /* Custom Scrollbar Styles */
+.scrollbar-thin::-webkit-scrollbar {
+  width: 6px; /* Adjust the width as needed */
+}
 
+.scrollbar-thin::-webkit-scrollbar-thumb {
+  background-color: #64748b; /* Color of the scrollbar thumb */
+  border-radius: 3px;
+}
+
+.scrollbar-thin::-webkit-scrollbar-track {
+  background-color: #f1f5f9; /* Color of the scrollbar track */
+  border-radius: 3px;
+}
+
+}
